refactor: corrections in the content

--- a/index.html
+++ b/index.html
@@ -69,19 +69,22 @@
                     <a class="" href="mailto:elena.kozlova.job@gmail.com" target="_blank">elena.kozlova.job@gmail.com</a>
                 </li>
                 <li class="contacts__item">
-                    <span class="">GitHub</span>
-                    <a class="" href="https://github.com/millisabel" target="_blank">millisabel</a>
-                </li>
-                <li class="contacts__item">
-                    <a class="" href="http://www.linkedin.com/in/elena-kozlova-3a86021a1" target="_blank">linkedin</a>
-                </li>
-                <li class="contacts__item">
                     <span class="">Discord</span>
                     <a class="" href="https://discord.com/" target="_blank">@millisabel</a>
                 </li>
                 <li class="contacts__item">
                     <span class="">Telegram</span>
                     <a class="" href="https://t.me/millisabel" target="_blank">@millisabel</a>
+                </li>
+                <li class="contacts__item">
+                    <span class="">GitHub</span>
+                    <a class="" href="https://github.com/millisabel" target="_blank">millisabel</a>
+                </li>
+                <li class="contacts__item">
+                    <a class="" href="https://codepen.io/millisabel" target="_blank">codepen</a>
+                </li>
+                <li class="contacts__item">
+                    <a class="" href="http://www.linkedin.com/in/elena-kozlova-3a86021a1" target="_blank">linkedin</a>
                 </li>
             </ul>
         </section>
